--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Todo o meu amor</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="celulas.css">
 
 </head>
 <body>
